Adding in text for OHI Theory, updating yaml, cleaning ohi_model/layers_info issues (see gdoc OHI Qs, As, Action Items).

--- a/ohi-global/metadata_documentation/ohi_model/layers_info/np_harvest_product_weight.Rmd
+++ b/ohi-global/metadata_documentation/ohi_model/layers_info/np_harvest_product_weight.Rmd
@@ -5,6 +5,13 @@ If a country was missing tonnes or dollar values (but had one of the values), th
 **Table 7.10. FAO categories included in each natural product commodity**
 
 ```{r, echo=FALSE, warning=FALSE, error=FALSE, messages=FALSE}
+library(magrittr)
+library(tidyverse)
+library(kableExtra)
+```
+
+
+```{r, echo=FALSE, warning=FALSE, error=FALSE, messages=FALSE}
 data <- read.csv('https://raw.githubusercontent.com/OHI-Science/ohiprep/master/globalprep/np/v2016/raw/commodities2products.csv') %>%
   group_by(product) %>%
   summarize(subcategory = paste(commodity, collapse = ", ")) %>%
