--- a/OHI-theory.qmd
+++ b/OHI-theory.qmd
@@ -3,7 +3,9 @@ title: "1. Theory of OHI"
 toc: true
 ---
 
-# 2.1 A comprehensive framework to assess ocean health
+![Credit: Pixabay](media/ocean_sunset_island.jpg){fig-align="right"}
+
+## 1.1 A comprehensive framework to assess ocean health
 
 The Ocean Health Index assesses ocean health which we define as how well we are sustainably managing the resources that we want and need from the ocean (e.g., tourism and recreation, food provisioning).
 
@@ -11,16 +13,16 @@ The OHI is considered a composite indicator because it combines many indicators 
 
 Without an overall framework to evaluate indicators, certain indicators may be overemphasized relative to their true importance due to researcher bias (most researchers believe their area of study is the most important), trends in research (what is currently considered a hot topic and is funded), and availability of data (e.g., some data is easier to collect). A model that combines multiple indicators will inevitably have flaws, but at least we know which variables are included and how they are weighted.
 
-# 2.2 The role of humans
+## 1.2 The role of humans
 
 One of the primary contributions of the OHI is that it recognizes people are an important part of the marine system. Both conservation and extractive use of ocean resources are valued, and consequently, scores are highest when we maximize the benefits we receive while maintaining sustainability so we can continue to receive benefits now and into the future. One temptation of indicator development is to focus only on the pressures that humans apply to systems. This makes sense because we want to be sure we are adequately protecting resources. However, eliminating all pressures on the ocean would require eliminating all contact between humans and the ocean. Beyond being unrealistic, this is undesirable because we would stop receiving all the benefits that we rely on from the ocean. The OHI is unique because it tracks both the pressures we put on oceans as well as the benefits we receive.
 
-# 2.3 Yearly assessments
+## 1.3 Yearly assessments
 
 The global Ocean Health Index has been assessed every year since 2012. The primary goal of each yearly assessment is to calculate a new year of scores using the most recent data. Often, in addition to incorporating an additional year of data, we make improvements to models or decide to use different data sources. To ensure that scores for all years are comparable, we recalculate scores for previous scenario years for each assessment using new methods and data sources. For the current assessment, for example, in addition to calculating the current year’s scores, we recalculate scores for every year since 2012. Consequently, comparisons among years should always be performed using data from the same assessment year so trends in scores reflect changes to ocean health rather than changes to methods.
 
 Not all data layers are reported through the most current assessment year, and consequently, the OHI scores are calculated using the most recent year of available data. Details on which years are used for each data layer are provided in Table 7.2.
 
-# 2.4 Brief anatomy of OHI scores
+## 1.4 Brief anatomy of OHI scores
 
 We define ocean health as the sustainable delivery of ten widely-held public goals for ocean ecosystems (Table 2.1). These goals represent the full suite of benefits that people want and need from the ocean, including the traditional ‘goods and services’ people often consider (e.g., fish to eat, coastal protection from nearshore habitats) as well as benefits less commonly accounted for, such as cultural values and biodiversity. Within each region, scores, ranging from 0 to 100, are calculated for the 10 goals (section 5.2). Four of the goals are calculated from 2 subgoals. The subgoals are calculated independently (i.e., they are treated as if they are goals) and then combined into the goal status score (Table 2.2).
