--- a/regions.qmd
+++ b/regions.qmd
@@ -1,3 +1,37 @@
 ---
 title: "3. Regions"
 ---
+
+
+
+# Regions
+One of the first steps of conducting an OHI assessment is defining regions of interest. These can be based on political and/or ecological boundaries. The definition of a “region” varies depending on the goals and scale of the OHI assessment. For the global OHI, each region is defined as the Exclusive Economic Zone boundaries [EEZ,  @claus2012marine] area (300 nm offshore) for all coastal countries and territories (e.g., US Virgin Islands).  
+
+There are 220 global coastal countries and territorial regions (Table 4.1). Regions are based on EEZ boundaries. However, we aggregate some EEZ regions to the level of country (e.g., Hawaii is estimated as part of the larger U.S.). We have also modified some boundaries [@halpern2012index; @halpern2015patterns]. We do not estimate OHI values for disputed or unclaimed areas.
+
+**Figure 4.1. Global regions**
+Map of the OHI regions (with color corresponding to 2022 regional index scores). Mollweide coordinate reference system is used because it accurately represents area.  
+
+![](../../yearly_results/global2023/Results/figures/maps_by_goal_mol/global_map_Index_2023_mol.png)
+
+**Table 4.1. Global regions**
+
+```{r table_regions, eval = TRUE, echo=FALSE, message=FALSE, error=FALSE, warning=FALSE}
+
+regions <- read.csv("https://raw.githubusercontent.com/OHI-Science/ohiprep/master/src/LookupTables/eez_rgn_2013master.csv", stringsAsFactors = FALSE) %>%
+  filter(rgn_typ == "eez") %>%
+  filter(rgn_id_2013 <= 250) %>%
+  filter(rgn_id_2013 != 213) %>%
+  select(region_id = rgn_id_2013, region_name = rgn_nam_2013, iso_id = eez_iso3, administrative_country=sov_nam) %>%
+  unique() %>%
+  arrange(region_id) %>%
+  mutate(status = ifelse(region_name == administrative_country, "country", "territory")) %>%
+  mutate(administrative_country = ifelse(region_name == administrative_country, "", administrative_country)) %>%
+  select("region"=region_name, "region ID"=region_id, "ISO code"=iso_id, type=status, "administrative country" =administrative_country) %>%
+  arrange(region)
+
+kable(regions) %>%
+  kableExtra::kable_styling(full_width = F)
+```
+
+
