--- a/models/models.qmd
+++ b/models/models.qmd
@@ -37,14 +37,68 @@ resilience <- TRUE
 
 
 ## Regional and global Index scores
-```{r child = '../../metadata_documentation/ohi_model/index_scores.Rmd', eval=index_scores}
-# just copy paste that content into a new subheading 
-```
+( previously: r child = '../../metadata_documentation/ohi_model/index_scores.Rmd', eval=index_scores)
+
+The overall index score for each region ($I_{region}$) is calculated as a weighted average of all the scores ($G$), for each goal ($g$) such that:
+
+$$
+{ I_{region} }\quad =\quad \frac { \displaystyle\sum_{ g=1 }^{ N }{ { w }_{ g }{ G }_{ g } }  }{ \displaystyle\sum _{ g=1 }^{ N }{ { w }_{ g } }  }, (Eq. 5.1) 
+$$
+
+
+where, $w_{g}$ is the weight for each goal.
+
+For the global assessment, the goal weights ($w_{g}$) were assumed to be equal, even though we know this assumption does not hold for most individuals or across individuals within communities.  Ideally these weights would be derived empirically, but such an effort would require surveying a full spectrum of people from every single country. This was beyond the scope of this project, but may be possible in a future application of the Index.
+
+In many places certain goals are not relevant, for example, production-focused goals typically do not apply to uninhabited islands, and the coastal protection or carbon storage goals will not apply to regions without the relevant coastal ecosystems. 
+
+The overall global index score ($I_{global}$) is calculated as the area weighted average of the index scores ($I_{region}$) for each region ($i$): 
+
+$$
+{ I }_{ global }\quad =\quad \frac { \displaystyle\sum _{ i=1 }^{ N }{ { a }_{ i }{ I }_{ region,i } }  }{ \displaystyle\sum _{ i=1 }^{ N }{ { a }_{ i } }  }, (Eq. 5.2) 
+$$
+
+where, $a_{i}$ is each region's ocean area, based on the EEZ area.
 
 ## Goal scores
-```{r child = '../../metadata_documentation/ohi_model/goal_model.Rmd', eval=goal_model}
 
-```
+(previously r child = '../../metadata_documentation/ohi_model/goal_model.Rmd', eval=goal_model)
+
+Each goal score is the average of its current status and likely future status (Figure 5.1, see section *5: Goal models and data* for methods used to calculate status of each goal).  The Index assesses the current status of each goal relative to a reference point.  Likely future status is estimated using: recent trends in current status; pressures that can stress the system and threaten future delivery of benefits; and resilience to such pressures, due to governance, institutional and ecological factors. 
+
+**Figure 5.1. Pie chart describing the contribution of each dimension to the goal score**
+![](../../metadata_documentation/ohi_model/figures/ScoreDimensionsPieChart.png)
+
+
+Each goal score, $G$, is the average of its present status, $x$, and its likely near-term future status, $\hat x_{F}$:
+
+$$
+G \quad =\quad \frac {x \quad +\quad \hat x_{F} }{ 2 }, (Eq. 5.3)
+$$
+
+The present status of goal, $x$, is its present state, $X$, relative to a reference point, $X_{R}$, uniquely chosen for each goal:
+
+$$
+{ x }_{ i }\quad =\quad \frac { X }{  X_{R} }, (Eq. 5.4) 
+$$
+
+The reference point, $X_{R}$, can be determined mechanistically using a production function (e.g., maximum sustainable yield, MSY, for fisheries), spatially by means of comparison with another region (e.g., country X represents the best possible known case), temporally using a past benchmark (e.g., historical habitat extent), or in some cases via known (e.g., zero pollution) or established (e.g., 30% of waters set aside in MPAs) targets. Past benchmarks can either be a fixed point in time or a moving target (e.g., five years prior to most current data). The type of reference point can have important implications for interpretations of how a goal is doing in any given country.
+
+For each region, the estimate of a goal’s likely near-term future status is a function of its present status, $x$ modified by: recent trends, $T$, in status; current cumulative pressures, $p$, acting on the goal; and social and ecological resilience, $r$, to pressures given the governance and social institutions in place to protect or regulate the system and the ecological condition of the system:
+
+$$
+\hat {x} _{F} \quad = \quad \left[ 1 \quad + \quad \beta T \quad + \quad \left( 1\quad -\quad \beta  \right) \left( r \quad - \quad  p \right)  \right] x, (Eq. 5.5)
+$$
+
+
+where, $\beta$ represents the relative importance of the trend versus the resilience and pressure terms in determining the likely trajectory of the goal status into the future. We assume $\beta = 0.67$, which makes trend twice as important as the pressure/resilience component.  We chose this value because we believe the direct measure of trend is a better indicator of future (i.e., in five years) condition than indirect measures of pressure and resilience.
+
+The role of the resilience and pressure dimensions is to improve our understanding of the likely near-term future condition by incorporating additional information beyond that provided by the recent trend. Pressure or resilience measures that were in existence in the past may have a cumulative effect that has not yet manifested itself in trend (e.g., fishing pressure may have increasingly negative impacts as successive year classes of fish become increasingly less abundant; resilience due to establishment of a marine protected area (MPA) may require a number of years before its benefits become apparent). In addition, the recent trend does not capture the effect of current levels of resilience and pressures. The expectation of a likely future condition suggested by the trend will become more or less optimistic depending on the resilience and pressure dimensions. If the effects are equal they cancel each other out.
+
+Both resilience and pressure dimensions are scaled from 0 to 1, and trend is constrained to -1.0 ≤ $T$ ≤ 1.0 (i.e., values outside this range are clamped to range end values). 
+
+The likely future status cannot exceed the maximum possible value of the status for each goal, which is 1.0. In reality data are rarely perfect, creating potential situations where likely future condition exceeds 1.0. To address these cases, we implemented two rules. First, if current status = 1.0, then trend is set = 0.0, since any trend > 0.0 in those cases must be due to incomplete or imperfect data. Second, status and likely future status scores were constrained to maximum value of 1.
+
 
 ## Likely future status dimensions
 Three dimensions are used to calculate likely future status: trends, pressure, and resilience.  This section describes the calculations underlying these three dimensions.
