--- a/regions.qmd
+++ b/regions.qmd
@@ -3,7 +3,6 @@ title: "3. Regions"
 ---
 
 
-
 # Regions
 One of the first steps of conducting an OHI assessment is defining regions of interest. These can be based on political and/or ecological boundaries. The definition of a “region” varies depending on the goals and scale of the OHI assessment. For the global OHI, each region is defined as the Exclusive Economic Zone boundaries [EEZ,  @claus2012marine] area (300 nm offshore) for all coastal countries and territories (e.g., US Virgin Islands).  
 
@@ -12,6 +11,7 @@ There are 220 global coastal countries and territorial regions (Table 4.1). Regi
 **Figure 4.1. Global regions**
 Map of the OHI regions (with color corresponding to 2022 regional index scores). Mollweide coordinate reference system is used because it accurately represents area.  
 
+[add to media/figs folder!]
 ![](../../yearly_results/global2023/Results/figures/maps_by_goal_mol/global_map_Index_2023_mol.png)
 
 **Table 4.1. Global regions**
